@@ -1,10 +1,9 @@
 #!/bin/sh
 
-echo "gettextize..."
-
-GETTEXTIZE="gettextize"
+GETTEXTIZE="autopoint"
+echo "$GETTEXTIZE..."
 ($GETTEXTIZE --version) < /dev/null > /dev/null 2>&1 || {
-	echo "gettextize not found"
+	echo "$GETTEXTIZE not found"
 	exit 1
 }
 
@@ -12,7 +11,7 @@ if test "$GETTEXTIZE"; then
 	echo "Creating $dr/aclocal.m4 ..."
 	test -r aclocal.m4 || touch aclocal.m4
 	echo "Running $GETTEXTIZE...  Ignore non-fatal messages."
-	echo "no" | $GETTEXTIZE --force --copy
+	$GETTEXTIZE --force
 	echo "Making aclocal.m4 writable ..."
 	test -r aclocal.m4 && chmod u+w aclocal.m4
 fi
