@@ -2,7 +2,7 @@
 # Autoconf/automake.
 # -------------------------------------------------------------------------------
 AC_PREREQ([2.5])
-AC_INIT([clipit], [1.2.4], [oss@web-tm.com])
+AC_INIT([clipit], [1.2.5], [oss@web-tm.com])
 AM_INIT_AUTOMAKE([AC_PACKAGE_TARNAME()], [AC_PACKAGE_VERSION()])
 
 AC_CONFIG_MACRO_DIR([m4])
@@ -26,6 +26,9 @@ clipitlocaledir='${prefix}/${DATADIRNAME}/locale'
 AC_SUBST(clipitlocaledir)
 
 AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION(0.18.1)
+
+AM_MAINTAINER_MODE([enable])
 
 # -------------------------------------------------------------------------------
 # Main settings.
